--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=ingredient-changer
 #MySql config
-spring.datasource.url=jdbc:mysql://localhost:3306/workshop-hibernate?createDatabaseIfNotExist=true&useSSL=true
+spring.datasource.url=jdbc:mysql://localhost:3306/recipe-manager?createDatabaseIfNotExist=true&useSSL=true
 spring.datasource.username=root
 spring.datasource.password=coderslab
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #Hibernate config
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
