--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
-spring.application.name=ingredient-changer
+spring.application.name=recipe-manager
 #MySql config
 spring.datasource.url=jdbc:mysql://localhost:3306/recipe-manager?createDatabaseIfNotExist=true&useSSL=true
 spring.datasource.username=root
 spring.datasource.password=coderslab
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #Hibernate config
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.h2.console.enabled=true
 #JSP config
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
